<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="#cc000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:padding="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_lock" android:tint="#FF5252" />
        <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/app_blocked" />
        <TextView android:textSize="16.0sp" android:textColor="#AAAAAA" android:id="@+id/tvBlockedAppName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="Instagram" />
        <TextView android:textSize="14.0sp" android:textColor="#AAAAAA" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/blocked_by_parent" android:textAlignment="center" />
        <Button android:textColor="#FFFFFF" android:id="@+id/btnRequestAccess" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/request_access" android:background="@drawable/bg_button_primary" android:paddingHorizontal="24dp" />
    </LinearLayout>
</FrameLayout>
