<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar android:id="@+id/toolbar" android:background="@color/surface" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:layout_constraintTop_toTopOf="parent" app:title="@string/my_devices" app:titleTextColor="@color/text_primary">
        <ImageButton android:layout_gravity="end" android:id="@+id/btnLogout" android:background="?selectableItemBackgroundBorderless" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_logout" android:contentDescription="Logout" android:layout_marginEnd="8.0dip" app:tint="@color/text_primary" />
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipeRefresh" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.material.card.MaterialCardView android:id="@+id/cardQuickStats" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" app:cardBackgroundColor="@color/surface" app:cardCornerRadius="16.0dip" app:cardElevation="0.0dip">
                <LinearLayout android:orientation="horizontal" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textSize="32.0sp" android:textStyle="bold" android:textColor="@color/primary" android:id="@+id/tvTotalDevices" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
                        <TextView android:textSize="12.0sp" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_devices" />
                    </LinearLayout>
                    <View android:background="@color/divider" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textSize="32.0sp" android:textStyle="bold" android:textColor="@color/success" android:id="@+id/tvOnlineDevices" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
                        <TextView android:textSize="12.0sp" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/online" />
                    </LinearLayout>
                    <View android:background="@color/divider" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textSize="32.0sp" android:textStyle="bold" android:textColor="@color/text_secondary" android:id="@+id/tvOfflineDevices" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
                        <TextView android:textSize="12.0sp" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/offline" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/text_primary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/connected_devices" android:layout_marginHorizontal="16.0dip" />
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvDevices" android:padding="16.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/llEmptyState" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                <ImageView android:layout_width="120.0dip" android:layout_height="120.0dip" android:src="@drawable/ic_notification" android:alpha="0.5" app:tint="@color/text_secondary" />
                <TextView android:textSize="18.0sp" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/no_devices" />
                <TextView android:textSize="14.0sp" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/add_device_hint" android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:textColor="@color/white" android:id="@+id/fabAddDevice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/add_device" app:backgroundTint="@color/primary" app:icon="@drawable/ic_notification" app:iconTint="@color/white" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <ProgressBar android:id="@+id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
